--- a/main.css
+++ b/main.css
@@ -1,55 +1,182 @@
-body {
-    margin:0;
+@import url("https://fonts.googleapis.com/css?family=Arvo");
+body,
+html {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background: #f5f4f4;
+  font-size: 13px;
+  font-family: "Arvo", monospace;
 }
 
-.container {
-    height:100vh;
-    display: grid;
-    grid-template-rows: 1fr 8fr 2fr 1fr;
-    grid-template-columns: 100%;
-    grid-template-areas: 
-        "header"
-        "content"
-        "sidebar"
-        "footer"
-    ;
+@supports ((display: -ms-grid) or (display: grid)) {
+  body,
+  html {
+    display: block;
+  }
 }
 
-@media screen and (min-width: 40em) {
-    .container {
-        grid-template-rows: 5em 1fr 5em;
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-        grid-template-areas: 
-            "header header header header"
-            "content content content sidebar"
-            "footer footer footer footer"
-        ;
-    }
+.message {
+  border: 1px solid #d2d0d0;
+  padding: 2em;
+  font-size: 1.7vw;
+  box-shadow: -2px 2px 10px 0px rgba(68, 68, 68, 0.4);
 }
 
-header {
-    background:tomato;
-    grid-area: header;
+@supports ((display: -ms-grid) or (display: grid)) {
+  .message {
+    display: none;
+  }
 }
 
-article {
-    background:gold;
-    grid-area: content;
+.section {
+  display: none;
+  padding: 2rem;
 }
 
-aside {
-    background:lightgreen;
-    grid-area: sidebar;
+@media screen and (min-width: 768px) {
+  .section {
+    padding: 4rem;
+  }
 }
 
-footer {
-    background:lightblue;
-    grid-area: footer;
+@supports ((display: -ms-grid) or (display: grid)) {
+  .section {
+    display: block;
+  }
 }
 
-header, article, aside, footer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 200%;
+h1 {
+  font-size: 2rem;
+  margin: 0 0 1.5em;
+}
+
+.grid {
+  display: -ms-grid;
+  display: grid;
+  grid-gap: 30px;
+  -ms-grid-columns: (minmax(auto-fit, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-auto-rows: 150px;
+  grid-auto-flow: row dense;
+}
+
+.item {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  justify-content: flex-end;
+  box-sizing: border-box;
+  background: #0c9a9a;
+  color: #fff;
+  -ms-grid-column: auto;
+  grid-column: auto;
+  grid-column-start: auto;
+  -ms-grid-row: auto;
+  grid-row: auto;
+  grid-row-start: auto;
+  color: #fff;
+  background: url("https://images.unsplash.com/photo-1460661419201-fd4cecdf8a8b?auto=format&fit=crop&w=1000&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D");
+  background-size: cover;
+  background-position: center;
+  box-shadow: -2px 2px 10px 0px rgba(68, 68, 68, 0.4);
+  -webkit-transition: -webkit-transform 0.3s ease-in-out;
+  transition: -webkit-transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+  cursor: pointer;
+  counter-increment: item-counter;
+}
+
+.item:nth-of-type(3n) {
+  background-image: url("https://images.unsplash.com/photo-1453814235491-3cfac3999928?auto=format&fit=crop&w=1050&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D");
+}
+
+.item:nth-of-type(4n) {
+  background-image: url("https://images.unsplash.com/photo-1495511623436-ba44aaee07cf?auto=format&fit=crop&w=1051&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D");
+}
+
+.item:nth-of-type(5n) {
+  background-image: url("https://images.unsplash.com/photo-1501608007014-6af9282011ca?auto=format&fit=crop&w=1234&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D");
+}
+
+.item:nth-of-type(6n) {
+  background-image: url("https://images.unsplash.com/photo-1494255109162-2f3d1eddb31e?auto=format&fit=crop&w=700&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D");
+}
+
+.item:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0.3;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.item:hover {
+  -webkit-transform: scale(1.05);
+  transform: scale(1.05);
+}
+
+.item:hover:after {
+  opacity: 0;
+}
+
+.item--medium {
+  -ms-grid-row-span: 2;
+  grid-row-end: span 2;
+}
+
+.item--large {
+  -ms-grid-row-span: 3;
+  grid-row-end: span 3;
+}
+
+.item--full {
+  grid-column-end: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .item--full {
+    grid-column: 1/-1;
+    -ms-grid-row-span: 2;
+    grid-row-end: span 2;
+  }
+}
+
+.item__details {
+  position: relative;
+  z-index: 1;
+  padding: 15px;
+  color: #444;
+  background: #fff;
+  text-transform: lowercase;
+  letter-spacing: 1px;
+  color: #828282;
+}
+
+.item__details:before {
+  content: counter(item-counter);
+  font-weight: bold;
+  font-size: 1.1rem;
+  padding-right: 0.5em;
+  color: #444;
 }
