--- a/main.css
+++ b/main.css
@@ -11,9 +11,7 @@ html {
   -ms-flex-align: center;
   align-items: center;
   position: relative;
-  width: 100%;
-  height: 100%;
-  background: #f5f4f4;
+  background: mintcream;
   font-size: 13px;
   font-family: "Arvo", monospace;
 }
@@ -26,10 +24,10 @@ html {
 }
 
 .message {
-  border: 1px solid #d2d0d0;
+  border: 1px solid cornsilk;
   padding: 2em;
   font-size: 1.7vw;
-  box-shadow: -2px 2px 10px 0px rgba(68, 68, 68, 0.4);
+  box-shadow: -2px 2px 10px 0px darkslategray;
 }
 
 @supports ((display: -ms-grid) or (display: grid)) {
@@ -63,10 +61,10 @@ h1 {
 .grid {
   display: -ms-grid;
   display: grid;
-  grid-gap: 30px;
+  grid-gap: 2rem;
   -ms-grid-columns: (minmax(auto-fit, 1fr));
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-auto-rows: 150px;
+  grid-auto-rows: 15rem;
   grid-auto-flow: row dense;
 }
 
@@ -83,15 +81,15 @@ h1 {
   -ms-flex-pack: end;
   justify-content: flex-end;
   box-sizing: border-box;
-  background: #0c9a9a;
-  color: #fff;
+  background: lightseagreen;
+  color: white;
   -ms-grid-column: auto;
   grid-column: auto;
   grid-column-start: auto;
   -ms-grid-row: auto;
   grid-row: auto;
   grid-row-start: auto;
-  color: #fff;
+  color: white;
   background: url("https://images.unsplash.com/photo-1460661419201-fd4cecdf8a8b?auto=format&fit=crop&w=1000&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D");
   background-size: cover;
   background-position: center;
@@ -166,11 +164,11 @@ h1 {
   position: relative;
   z-index: 1;
   padding: 15px;
-  color: #444;
-  background: #fff;
+  color: darkslategray;
+  background: white;
   text-transform: lowercase;
   letter-spacing: 1px;
-  color: #828282;
+  color: lightslategray;
 }
 
 .item__details:before {
@@ -178,5 +176,5 @@ h1 {
   font-weight: bold;
   font-size: 1.1rem;
   padding-right: 0.5em;
-  color: #444;
+  color: darkslategray;
 }
