--- a/main.css
+++ b/main.css
@@ -62,7 +62,7 @@ h1 {
   display: -ms-grid;
   display: grid;
   grid-gap: 2rem;
-  -ms-grid-columns: (minmax(auto-fit, 1fr));
+  -ms-grid-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-auto-rows: 15rem;
   grid-auto-flow: row dense;
@@ -139,7 +139,7 @@ h1 {
 }
 
 .item--medium {
-  -ms-grid-row-span: 2;
+  -ms-grid-row-span: 1;
   grid-row-end: span 2;
 }
 
@@ -163,7 +163,7 @@ h1 {
 .item__details {
   position: relative;
   z-index: 1;
-  padding: 15px;
+  padding: 1.15rem;
   color: darkslategray;
   background: white;
   text-transform: lowercase;
