--- a/main.css
+++ b/main.css
@@ -209,5 +209,6 @@ a {
 }
 
 #card-overlay {
+  border: 5px solid red;
   background-image: url("https://images.unsplash.com/photo-1501003878151-d3cb87799705?auto=format&fit=crop&w=1050&q=60&ixid=dW5zcGxhc2guY29tOzs7Ozs%3D");
 }
